--- a/test.ipynb
+++ b/test.ipynb
@@ -131,6 +131,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1         [-1, 56, 128, 128]           1,456\n",
+      "             PReLU-2         [-1, 56, 128, 128]               1\n",
+      "            Conv2d-3         [-1, 12, 128, 128]             684\n",
+      "             PReLU-4         [-1, 12, 128, 128]               1\n",
+      "            Conv2d-5         [-1, 12, 128, 128]           1,308\n",
+      "             PReLU-6         [-1, 12, 128, 128]               1\n",
+      "            Conv2d-7         [-1, 12, 128, 128]           1,308\n",
+      "             PReLU-8         [-1, 12, 128, 128]               1\n",
+      "            Conv2d-9         [-1, 12, 128, 128]           1,308\n",
+      "            PReLU-10         [-1, 12, 128, 128]               1\n",
+      "           Conv2d-11         [-1, 12, 128, 128]           1,308\n",
+      "            PReLU-12         [-1, 12, 128, 128]               1\n",
+      "           Conv2d-13         [-1, 56, 128, 128]             728\n",
+      "            PReLU-14         [-1, 56, 128, 128]               1\n",
+      "  ConvTranspose2d-15          [-1, 1, 256, 256]           4,537\n",
+      "================================================================\n",
+      "Total params: 12,644\n",
+      "Trainable params: 12,644\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.06\n",
+      "Forward/backward pass size (MB): 43.50\n",
+      "Params size (MB): 0.05\n",
+      "Estimated Total Size (MB): 43.61\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.models.super_resolution import FSRCNN\n",
+    "from torchsummary import summary\n",
+    "\n",
+    "model = FSRCNN()\n",
+    "model.to('cpu')\n",
+    "\n",
+    "summary(model, (1, 128, 128))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
