--- a/notebooks/inference.ipynb
+++ b/notebooks/inference.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.insert(0, '..')\n",
     "from onnxruntime import InferenceSession\n",
     "from src.data.sets.super_resolution import FastMRISuperResolutionDataset\n",
     "from torch.utils.data import Subset\n",
